tried to fix nav bar alignment

--- a/portfolio/stylesheet.css
+++ b/portfolio/stylesheet.css
@@ -1,7 +1,7 @@
 
 /* This is the id div for the header image */
 #header { 
-	width: 600px; 
+	width: 500px; 
 	height: 300px; 
 	margin-left: auto;  
 	margin-right: auto;
@@ -13,7 +13,6 @@
 /* This is the list items of a nav bar/ adding links to various pages */ 
 nav ul div li { 
   font-size: 15px;
-  text-align: center;
   display: inline;  
   margin: 15px;
   padding: 30px;
